# doublebeam

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt  convert_to_binary.cpp  fang2019model.txt  main.cpp  options_0deg.txt  options_born.txt  twopoint_manual.py
.circleci/: config.yml
doublebeam/: __init__.py  doublebeam.py  models.py  plotting.py  type_shorthands.py  utils.py
doublebeam-cpp/: .clang-format  CMakeLists.txt  convert_to_binary.cpp  main.cpp  model.cpp  model_thomas.txt  options0.txt  options1.txt  options_0deg.txt  options_parx.txt  options_thomas.txt  plot_results.py  test_filereads.cpp  timing.cpp  velocity_model.txt
doublebeam-cpp/cmake/Modules/: FindCXXGSL.cmake
doublebeam-cpp/scripts/: common.py  convert_source_file.py  convert_source_file_format.py  create_compliance_grid.py  plot_results.py
doublebeam-cpp/src/: beam.cpp  beam.hpp  config.cpp  config.hpp  doublebeam.cpp  doublebeam.hpp  dynamic_raytracing.cpp  dynamic_raytracing.hpp  eigen_helpers.cpp  eigen_helpers.hpp  fft.cpp  fft.hpp  integration.cpp  integration.hpp  io.cpp  io.hpp  kdtree.hpp  kinematic_raytracing.cpp  kinematic_raytracing.hpp  model.cpp  model.h  model.hpp  printing.cpp  printing.h  printing.hpp  ray.cpp  ray.hpp  raytracing.cpp  raytracing.hpp  raytracing_helpers.cpp  raytracing_helpers.hpp  raytracing_types.cpp  raytracing_types.hpp  seismodata.cpp  seismodata.hpp  strong_types.hpp  twopoint.cpp  twopoint.hpp  units.hpp  utils.cpp  (+2 more)
doublebeam-cpp/src/timing/: CMakeLists.txt  timing.cpp  timing.h  timing.hpp
doublebeam-cpp/tests/: CMakeLists.txt  test_fft.cpp  testing_utils.cpp  testing_utils.hpp
doublebeam-cpp/tests/unit_tests/: CMakeLists.txt  test_dynamic_raytracing.cpp  test_integration.cpp  test_io.cpp  test_printing.cpp  test_ray_tracing.cpp  test_raytracing_helpers.cpp  test_seismodata.cpp  test_twopoint.cpp  test_utils.cpp  test_velocity_model.cpp
doublebeam-cpp/tests/unit_tests/data/: P_analytic_squeeze.npy  P_multilayer1.npy  P_multilayer2.npy  P_multilayer3.npy  Q_multilayer0.npy  Q_multilayer1.npy  Q_multilayer2.npy  Q_multilayer3.npy  model.txt  sample_receiverfile  sample_sourcefile_missing_nsrc  sample_sourcefile_missing_sourcenumbers
doublebeam-cpp/tests/unit_tests/data/sample_project_dir/: receivers.txt  sources.txt
doublebeam-cpp/tests/unit_tests/data/sample_project_dir/shotdata/source_001/: receiver_001.txt  receiver_002.txt  receiver_003.txt
doublebeam-cpp/tests/unit_tests/data/sample_project_dir/shotdata/source_002/: receiver_001.txt  receiver_002.txt  receiver_003.txt
doublebeam-cpp/tests/unit_tests/data/sample_project_dir_binary/shotdata/source_001/: receiver_001.txt
doublebeam-cpp/tests/unit_tests/data/sample_project_dir_binary/shotdata/source_002/: receiver_002.txt
doublebeam/core/: common.py  models.py  raytracing.py  utils.py
doublebeam/core/raytracing/: initial_value.py  ray.py  raytracing.py  twopoint.py
doublebeam/io/: convert.py  input.py
doublebeam/raytracing/: initial_value.py  ray.py  twopoint.py
scripts/: add_source_index.py  common.py  convert_seismogram_amplitude.py  convert_source_file_format.py  convert_to_binary.cpp  convert_to_binary.py  create_compliance_grid.py  fix_header.py  plot_results.py  pre-commit.sh  reproduce_fig5b_from_0degrees.py  run-unittests.sh
src/: beam.cpp  beam.hpp  config.cpp  config.hpp  doublebeam.cpp  doublebeam.hpp  eigen_helpers.cpp  eigen_helpers.hpp  fft.cpp  fft.hpp  io.cpp  io.hpp  kdtree.cpp  kdtree.hpp  main.cpp  model.cpp  model.hpp  printing.cpp  printing.hpp  ray.cpp  ray.hpp  raytracing.cpp  raytracing.hpp  raytracing_helpers.cpp  raytracing_helpers.hpp  raytracing_types.cpp  raytracing_types.hpp  seismodata.cpp  seismodata.hpp  strong_types.hpp  twopoint.cpp  twopoint.hpp  units.hpp  utils.cpp  utils.hpp
src/timing/: timing.cpp  timing.hpp
tests/: CMakeLists.txt  test_doublebeam.py  test_input.py  test_ray_tracing.py  test_twopoint.py  test_utils.py  test_velocity_model.py  testing_utils.cpp  testing_utils.hpp  utils.py  utils_testing.py
tests/data/: P_multilayer.npy  Q_multilayer.npy
tests/unit_tests/: CMakeLists.txt  test_dynamic_raytracing.cpp  test_eigen_helpers.cpp  test_fft.cpp  test_io.cpp  test_printing.cpp  test_ray_tracing.cpp  test_raytracing_helpers.cpp  test_seismodata.cpp  test_twopoint.cpp  test_utils.cpp  test_velocity_model.cpp
tests/unit_tests/data/: P_analytic.npy  P_multilayer1.npy  P_multilayer3.npy  Q_analytic.npy  Q_analytic_squeeze.npy  Q_multilayer1.npy  Q_multilayer3.npy  fang2019model.txt  receiver_001.txt  sample_sourcefile  twopoint_velocity_model.txt
tests/unit_tests/data/sample_project_dir/shotdata/source_001/: receiver_003.txt
tests/unit_tests/data/sample_project_dir_binary/shotdata/source_002/: receiver_003.txt
